--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,8 +1,8 @@
 .popup__input {
   width: 100%;
-  height: 47px;
+  height: 45px;
   border: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
@@ -14,7 +14,7 @@
 }
 
 .popup__input_type_error {
-  border-bottom: 1px solid #FF0000;
+  border-bottom: 1px solid #ff0000;
 }
 
 .popup__input-error_active {
