--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -1,20 +1,31 @@
 .card__like-button {
   width: 21px;
   height: 18px;
-  background: transparent url('../../../images/like-inactive.svg') no-repeat;
-  
-  background-size: 21px 18px;
-  border: none;
-  cursor: pointer;
-  padding: 0;
   margin: 0;
+  border: none;
+  padding: 0;
+  background: transparent url("../../../images/like-inactive.svg") no-repeat;
+  background-size: 21px 18px;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .card__like-button:hover {
   opacity: 0.6;
+}
+
+.card__like-count {
+  margin-top: 3px;
+  text-align: center;
+}
+
+.card__like-cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
 }
