--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -1,17 +1,17 @@
 .popup__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 50px;
+  margin-top: 48px;
+  border: none;
+  border-radius: 2px;
+  color: white;
   font-size: 18px;
   line-height: 22px;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #000;
-  border-radius: 2px;
-  border: none;
   transition: visibility 0s, background 0.3s;
-  margin-top: 48px;
 }
 
 .popup__button:hover {
@@ -20,13 +20,13 @@
 }
 
 .popup__submit_inactive {
-  background: #F6F6F6;
-  color: #C4C4C4;
-  border: 1px solid #C4C4C4;
+  border: 1px solid #c4c4c4;
+  color: #c4c4c4;
+  background: #f6f6f6;
 }
 
 .popup__submit_inactive:hover {
-  background: #F6F6F6;
+  background: #f6f6f6;
   cursor: not-allowed;
 }
 
