--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -1,12 +1,11 @@
 .popup__content {
-  max-width: 430px;
-  width: 100%;
-  min-height: 330px;
-  background-color: #fff;
-  border-radius: 10px;
   position: relative;
   box-sizing: border-box;
+  width: 100%;
+  max-width: 430px;
+  border-radius: 10px;
   padding: 34px 36px;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 568px) {
@@ -16,4 +15,12 @@
     margin-top: 40px;
     padding: 30px 20px;
   }
+}
+
+.popup__delete {
+  min-height: 180px;
+}
+
+.popup__avatar {
+  min-height: 180px;
 }
